<resources>
    <string name="app_name">MiniProjetAndroid</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="fuelme_energy">FuelMe</string>
    <string name="energy">energy</string>
    <string name="fuelme_energy1">FuelMe energy</string>
    <string name="sign_in">Sign In</string>
    <string name="visitor"><u>Visitor</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="cin">CIN</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="name">Name</string>
    <string name="join_us">Join us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="national_identity">national identity</string>
    <string name="login">Login</string>
    <string name="s_identifier">S\'identifier</string>
    <string name="d_ja_inscrit">Déja inscrit ?</string>
    <string name="title_activity_admin1">Admin1Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="products">Products :</string>
    <string name="username">Username</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>

    <string name="facebook_app_id">1180081396252009</string>
    <string name="fb_login_protocol_scheme">fb1180081396252009</string>
    <string name="facebook_client_token">56789</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYWhtZWRkZGQxOSIsImEiOiJjbGMzc2d5dzEyeTZxM29ueWtjcGtkcDU4In0.oG4dH6XQF0HBiH1ygchQ3Q</string>

</resources>